# angular-bazel-example

./: .gitignore  BUILD.bazel  README.md  WORKSPACE  package.json  size.js
.circleci/: config.yml
e2e/: BUILD.bazel
src/: BUILD.bazel  app.component.html  app.module.ts  index.html  typings.d.ts
src/hello-world/: BUILD.bazel  hello-world.component.html  hello-world.component.ts
src/images/: BUILD.bazel
src/styles/: BUILD  main.scss  shared.scss
src/todos/: todos.component.html  todos.component.scss
src/typings/: BUILD.bazel
tools/history-server/: index.bzl
