package(default_visibility = ["//visibility:public"])

alias(
    name = "install",
    actual = "@nodejs//:yarn",
)

# ts_library and ng_module use the `//:tsconfig.json` target
# by default. This alias allows omitting explicit tsconfig
# attribute.
alias(
    name = "tsconfig.json",
    actual = "//src:tsconfig.json",
)

# This export allows targets in other packages to reference files that live
# in this package.
exports_files([
    # Let devserver and testing targets reference systemjs & zone.js distros
    "node_modules/systemjs/dist/system.js",
    "node_modules/zone.js/dist/zone.min.js",
    "node_modules/zone.js/dist/zone-testing-bundle.js",
])

filegroup(
  name = "node_modules",
  srcs = glob(["/".join(["node_modules", pkg, "**", ext]) for pkg in [
    "@types",
    "@ngrx",
    "bytebuffer",
    "hammerjs",
    "jasmine",
    "long",
    "minimist",
    "protobufjs",
    "protractor",
    "reflect-metadata",
    "source-map",
    "tsickle",
    "tslib",
    "tsutils",
    "typescript",
    "zone.js",
  ] for ext in [
    "*.js",
    "*.json",
    "*.d.ts",
  ]] + [
    "node_modules/http-server/**",
  ]) + ["@build_bazel_rules_typescript//:node_modules"],
)